[package]
name = "stalker"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/PeterAjaaa/stalker/"
description = "stalker is a fast and simple file watcher and executor with git-like syntax."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["cargo"] }
dirs = "4.0.0"
sha2 = "0.10.2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = false

[[bin]]
name = "stalk"
path = "src/main.rs"
