[package]
name = "stalker"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/PeterAjaaa/stalker/"
description = "stalker is a fast and simple file watcher and executor with git-like syntax."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["cargo"] }
crossterm = "0.25.0"
dirs = "4.0.0"
execute = "0.2.11"
notify = "4.0.17"
terminal_size = "0.2.1"
walkdir = "2.3.2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = false

[[bin]]
name = "stalk"
path = "src/main.rs"
